project metadata