@@ -3,3 +3,4 @@ captah
 1] CaPtah.genmodel > open > right click > "Generate All"
 2] GenerateCaPtah.mwe2 > right click > "MWE2 Workflow"
 3] CaPtah.xtext > right click > "Generate xtext Artefacts"
+4] Run configuration > Eclipse Application > Arguments +=  -XX:MaxPermSize=256m
